mobile: fix article header alignment

--- a/static/pub/style/style.css
+++ b/static/pub/style/style.css
@@ -144,6 +144,7 @@ pre::-webkit-scrollbar, code::-webkit-scrollbar { display: none; }
 @media only screen and (max-width: 600px) {
     body { font-size: 100% }
     article { padding-left: 2%; flex-basis: 100%; max-width: 96%; text-align: justify;}
+    article h1, article h2, article h3, article h4, article h5, article h6 { text-align: left; }
     img, video { max-width: 100%; }
     .gallery-image-container, .cdnimg-container, .cdnvid-container {  max-width:  100%; }
     .gallery-micro {max-width: 50%;}
